<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:ignore="UseCompoundDrawables">


    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/img_login"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/orderNumber"
        android:layout_marginTop="25dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        tools:text="Orden Nº 01234 recibida"/>

    <TextView
        android:layout_marginTop="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_created_msg"/>

    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/delivery_complete_day"/>

    <TextView
        android:id="@+id/deliveryDate"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Lunes 30/01/2023"/>

    <TextView
        android:id="@+id/deliveryTime"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="09:00 a.m. - 10:00 a.m."/>

    <TextView
        android:layout_marginTop="18dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/order_created_msg2"/>

    <Button
        android:id="@+id/continueBuying"
        style="?borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_button_blue"
        android:layout_marginStart="@dimen/default_margin_start_end_button"
        android:layout_marginEnd="@dimen/default_margin_start_end_button"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="@dimen/default_text_size_button"
        android:text="@string/continue_buying"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/default_text_size_button"
        android:elevation="@dimen/default_elevation_button"/>

</LinearLayout>