<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/loadingProducts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/loading_products"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_empty_shop"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorText"
            android:layout_marginBottom="25dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:text="@string/empty_shopping_list"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:textColor="@color/colorTextSecondary"
            android:text="@string/empty_shopping_list_sub_msg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/shoppingCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_shopping_cart"
                tools:itemCount="3"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorDivider"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top_textInputLayout"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/subtotal_label" />

                <TextView
                    android:id="@+id/subTotal"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:textColor="@color/colorText"
                    android:paddingStart="@dimen/item_product_text_margin_start_end"
                    android:paddingEnd="@dimen/item_product_text_margin_start_end"
                    tools:text="S/ 120.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/delivery_label" />

                <TextView
                    android:id="@+id/delivery"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:gravity="start"
                    android:paddingStart="@dimen/item_product_text_margin_start_end"
                    android:paddingEnd="@dimen/item_product_text_margin_start_end"
                    tools:text="S/ 20.00" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:gravity="end"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorTextSecondary"
                    android:text="@string/total_label" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:gravity="start"
                    android:paddingStart="@dimen/item_product_text_margin_start_end"
                    android:paddingEnd="@dimen/item_product_text_margin_start_end"
                    tools:text="S/ 140.00" />

            </LinearLayout>

            <Button
                android:id="@+id/next"
                style="?borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_button_blue"
                android:layout_marginStart="@dimen/default_margin_start_end_button"
                android:layout_marginEnd="@dimen/default_margin_start_end_button"
                android:layout_marginTop="@dimen/default_margin_top_textInputLayout"
                android:layout_marginBottom="@dimen/default_text_size_button"
                android:text="@string/process_purchase"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/default_text_size_button"
                android:elevation="@dimen/default_elevation_button"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>